--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
       <div id="lezioni" class="container">
-        <div class="col-lg-12 col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 container">
+        <div class="container">
           <div class="col-lg-12 col-md-12 col-xs-12">
             <h1>Lezioni dove vuoi tu</h1>
           </div>
